--- a/BlazorComponents.csproj
+++ b/BlazorComponents.csproj
@@ -1,5 +1,4 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
-
   <PropertyGroup>
     <TargetFrameworks>net10.0</TargetFrameworks>
     <Nullable>enable</Nullable>
@@ -17,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
     <PackageReference Include="MudBlazor" Version="8.15.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="Tomlyn" Version="0.20.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,5 +24,4 @@
     <ProjectReference Include="..\mas_capnproto_schemas\gen\csharp\zalfmas_capnpschemas.csproj" />
     <ProjectReference Include="..\mas_csharp_common\common.csproj" />
   </ItemGroup>
-
 </Project>
